force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TXNL-{000000000}</displayFormat>
        <label>Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>