force-app/main/default/objects/Transaction_Log__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <label>Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>