force-app/main/default/objects/Transaction_Log__c/fields/Payment_Service__c.field-meta.xml
<CustomField>
    <fullName>Payment_Service__c</fullName>
    <description>The payment service leveraged for this transaction (default=&quot;Onbe&quot;)</description>
    <label>Payment Service</label>
    <length>30</length>
    <type>Text</type>
</CustomField>